[package]
name = "bvh-arena"
version = "1.1.3"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.56"
description = "A bounding-volume hierarchy for in-game broad-phase collision detection"
repository = "https://github.com/jcornaz/bvh-arena"
keywords = ["bvh", "sah", "bounding", "volume", "aabb"]
categories = ["game-development"]

[features]
default = ["std"]
std = ["slotmap/std"]

[dependencies]
# Private dependencies:
slotmap = { version = "1.0", default-features = false }

[dev-dependencies]
glam = "0.24.0"

[profile.dev]
opt-level = 1
