[package]
name = "bvh-arena"
version = "1.2.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.60"
description = "A bounding-volume hierarchy for in-game broad-phase collision detection"
repository = "https://github.com/jcornaz/bvh-arena"
keywords = ["bvh", "sah", "bounding", "volume", "aabb"]
categories = ["game-development"]

[badges.maintenance]
status = "passively-maintained"

[features]
default = ["std"]
std = ["slotmap/std"]

[dependencies]
# Private dependencies:
slotmap = { version = "1.0.6", default-features = false }

[dev-dependencies]
glam = "0.32"

[profile.dev]
opt-level = 1
